_gw4xx4, explore-filter-menu__list-title -> list-title

--- a/account-settings.html
+++ b/account-settings.html
@@ -291,7 +291,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="personal-info-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Personal info
                                                 </div>
@@ -365,7 +365,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="account-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Account
                                                 </div>
@@ -445,7 +445,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="host-manage-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Manage your listing
                                                 </div>
@@ -513,7 +513,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="experience-manage-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Manage your experience
                                                 </div>
@@ -595,7 +595,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="host-referral-no-subtitle-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Refer a Host
                                                 </div>
@@ -675,7 +675,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="how-airbnb-works-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   How Airbnb works
                                                 </div>
@@ -743,7 +743,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="booking-and-traveling-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Get help
                                                 </div>
@@ -811,7 +811,7 @@
                                               <span class="account-container-mb__menu-btn-wrapper"
                                                 ><div
                                                   id="neighborhood-support-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Contact Neighborhood Support
                                                 </div>
