--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -216,7 +216,7 @@
                                     <div class="explore-filter-menu__list-label">
                                       <div
                                         id="SURVEILLANCE-row-title"
-                                        class="explore-filter-menu__list-title"
+                                        class="list-title"
                                       >
                                         Security camera(s)
                                       </div>
@@ -278,7 +278,7 @@
                                     <div class="explore-filter-menu__list-label">
                                       <div
                                         id="WEAPONS-row-title"
-                                        class="explore-filter-menu__list-title"
+                                        class="list-title"
                                       >
                                         Weapons
                                       </div>
@@ -319,7 +319,7 @@
                                     <div class="explore-filter-menu__list-label">
                                       <div
                                         id="ANIMALS-row-title"
-                                        class="explore-filter-menu__list-title"
+                                        class="list-title"
                                       >
                                         Dangerous animals
                                       </div>
