--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -531,7 +531,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="new-listing-promotion-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div>
                                         Offer a
