--- a/edit/about.html
+++ b/edit/about.html
@@ -495,7 +495,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 Jose Angelo
                                               </div>
