--- a/edit/what.html
+++ b/edit/what.html
@@ -681,7 +681,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                   <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="ONLINE_QUESTION-0-radio-row-row-title"
-                                                      class="explore-filter-menu__list-title"
+                                                      class="list-title"
                                                     >
                                                       Indoors or on my personal
                                                       property
@@ -719,7 +719,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                   <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="ONLINE_QUESTION-1-radio-row-row-title"
-                                                      class="explore-filter-menu__list-title"
+                                                      class="list-title"
                                                     >
                                                       Outdoors and not on my
                                                       personal property
@@ -772,7 +772,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 <span class="account-container-mb__menu-btn-wrapper"
                                                   ><div
                                                     id="CONCEPT_REFINEMENT_0-disclosure-row-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     Dish
                                                   </div>
@@ -836,7 +836,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 <span class="account-container-mb__menu-btn-wrapper"
                                                   ><div
                                                     id="CONCEPT_REFINEMENT_1-disclosure-row-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     Cuisine
                                                   </div>
