--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -571,7 +571,7 @@
                                                   >
                                                     <div
                                                       id="credit-section-0-gifts-actions-no-transaction-title"
-                                                      class="explore-filter-menu__list-title"
+                                                      class="list-title"
                                                     >
                                                       Current credit balance
                                                     </div>
@@ -628,7 +628,7 @@
                                                   >
                                                     <div
                                                       id="undefined-no-transaction-title"
-                                                      class="explore-filter-menu__list-title"
+                                                      class="list-title"
                                                     >
                                                       Your coupons
                                                     </div>
@@ -1346,7 +1346,7 @@
                                                   >
                                                     <div
                                                       id="credit-section-0-gifts-actions-no-transaction-title"
-                                                      class="explore-filter-menu__list-title"
+                                                      class="list-title"
                                                     >
                                                       Current credit balance
                                                     </div>
@@ -1403,7 +1403,7 @@
                                                   >
                                                     <div
                                                       id="undefined-no-transaction-title"
-                                                      class="explore-filter-menu__list-title"
+                                                      class="list-title"
                                                     >
                                                       Your coupons
                                                     </div>
