--- a/places.html
+++ b/places.html
@@ -447,7 +447,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="description-text-0-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <div class="place__details-recomendation-desc">
                                             My buddy Gregorio is the head chef
@@ -621,7 +621,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="22357569-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <span>
                                             <div class="place__tips-desc-wrapper">
@@ -708,7 +708,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="22104999-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <span>
                                             <div class="place__tips-desc-wrapper">
@@ -795,7 +795,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="20401625-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <span>
                                             <div class="place__tips-desc-wrapper">
@@ -878,7 +878,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="20023328-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <span>
                                             <div class="place__tips-desc-wrapper">
@@ -965,7 +965,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="19426397-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <span>
                                             <div class="place__tips-desc-wrapper">
@@ -16640,7 +16640,7 @@
                                     <div class="explore-filter-menu__list-label">
                                       <div
                                         id="address-row-title"
-                                        class="explore-filter-menu__list-title"
+                                        class="list-title"
                                       >
                                         <span class="text-highlight dir dir-ltr"
                                           >Location</span
