--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -338,7 +338,7 @@
                                                       <div class="explore-filter-menu__list-label">
                                                         <div
                                                           id="request-data-row-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           <h2
                                                             class="privacy-sharing__manage-header-h2 dir dir-ltr"
@@ -375,7 +375,7 @@
                                                                 class="privacy-sharing__manage-acc-title"
                                                                 ><div
                                                                   id="ap-row-row-title"
-                                                                  class="explore-filter-menu__list-title"
+                                                                  class="list-title"
                                                                 >
                                                                   Request your
                                                                   personal data
@@ -436,7 +436,7 @@
                                                                 class="privacy-sharing__manage-acc-title"
                                                                 ><div
                                                                   id="erasure-row-row-title"
-                                                                  class="explore-filter-menu__list-title"
+                                                                  class="list-title"
                                                                 >
                                                                   Delete your
                                                                   account
@@ -498,7 +498,7 @@
                                                       <div class="explore-filter-menu__list-label">
                                                         <div
                                                           id="activity-row-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           <h2
                                                             class="privacy-sharing__sharing-title dir dir-ltr"
@@ -523,7 +523,7 @@
                                                       <div class="explore-filter-menu__list-label">
                                                         <div
                                                           id="includeInSearchEngines-switch-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           Include my profile and
                                                           listing in search
@@ -574,7 +574,7 @@
                                                       <div class="explore-filter-menu__list-label">
                                                         <div
                                                           id="data-row-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           <h2
                                                             class="privacy-sharing__sharing-title dir dir-ltr"
@@ -599,7 +599,7 @@
                                                       <div class="explore-filter-menu__list-label">
                                                         <div
                                                           id="useDataForInclusion-switch-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           Use my first name and
                                                           profile photo to help
@@ -688,7 +688,7 @@
                                                       <div class="explore-filter-menu__list-label">
                                                         <div
                                                           id="services-row-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           <h2
                                                             class="privacy-sharing__services-divider dir dir-ltr"
@@ -1021,7 +1021,7 @@
                                               <div class="explore-filter-menu__list-label">
                                                 <div
                                                   id="request-data-row-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   <h2
                                                     class="privacy-sharing__manage-header-h2 dir dir-ltr"
@@ -1053,7 +1053,7 @@
                                                       <span class="privacy-sharing__manage-acc-title"
                                                         ><div
                                                           id="ap-row-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           Request your personal
                                                           data
@@ -1107,7 +1107,7 @@
                                                       ><span class="privacy-sharing__manage-acc-title"
                                                         ><div
                                                           id="erasure-row-row-title"
-                                                          class="explore-filter-menu__list-title"
+                                                          class="list-title"
                                                         >
                                                           Delete your account
                                                         </div>
@@ -1163,7 +1163,7 @@
                                               <div class="explore-filter-menu__list-label">
                                                 <div
                                                   id="activity-row-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   <h2
                                                     class="privacy-sharing__sharing-title dir dir-ltr"
@@ -1187,7 +1187,7 @@
                                               <div class="explore-filter-menu__list-label">
                                                 <div
                                                   id="includeInSearchEngines-switch-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Include my profile and listing
                                                   in search engines
@@ -1234,7 +1234,7 @@
                                               <div class="explore-filter-menu__list-label">
                                                 <div
                                                   id="data-row-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   <h2
                                                     class="privacy-sharing__sharing-title dir dir-ltr"
@@ -1258,7 +1258,7 @@
                                               <div class="explore-filter-menu__list-label">
                                                 <div
                                                   id="useDataForInclusion-switch-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Use my first name and profile
                                                   photo to help fight
@@ -1343,7 +1343,7 @@
                                               <div class="explore-filter-menu__list-label">
                                                 <div
                                                   id="services-row-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   <h2
                                                     class="privacy-sharing__services-divider dir dir-ltr"
