--- a/resolutions.html
+++ b/resolutions.html
@@ -174,7 +174,7 @@
                             <div class="explore-filter-menu__list-label">
                               <div
                                 id="intent-send-money-row-title"
-                                class="explore-filter-menu__list-title"
+                                class="list-title"
                               >
                                 Send money
                               </div>
@@ -204,7 +204,7 @@
                             <div class="explore-filter-menu__list-label">
                               <div
                                 id="intent-request-money-row-title"
-                                class="explore-filter-menu__list-title"
+                                class="list-title"
                               >
                                 Request money
                               </div>
