--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -197,7 +197,7 @@
                               <div class="explore-filter-menu__list-label">
                                 <div
                                   id="reason-GUEST_OFFER_DAMAGE-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Damaged or missing items
                                 </div>
@@ -227,7 +227,7 @@
                               <div class="explore-filter-menu__list-label">
                                 <div
                                   id="reason-GUEST_OFFER_EXTRA-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Extra services
                                 </div>
@@ -266,7 +266,7 @@
                               <div class="explore-filter-menu__list-label">
                                 <div
                                   id="reason-GUEST_OFFER_OTHER-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Other trip-related issues
                                 </div>
