--- a/reviews.html
+++ b/reviews.html
@@ -380,7 +380,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_very_high-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Much better than I expected
                                                 </div>
@@ -428,7 +428,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_very_high-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Much better than I expected
                                                 </div>
@@ -459,7 +459,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_high-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   A bit better than I expected
                                                 </div>
@@ -507,7 +507,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_high-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   A bit better than I expected
                                                 </div>
@@ -538,7 +538,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_neutral-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   About the same as I expected
                                                 </div>
@@ -586,7 +586,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_neutral-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   About the same as I expected
                                                 </div>
@@ -617,7 +617,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_low-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   A bit worse than I expected
                                                 </div>
@@ -665,7 +665,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_low-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   A bit worse than I expected
                                                 </div>
@@ -696,7 +696,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_very_low-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Much worse than I expected
                                                 </div>
@@ -744,7 +744,7 @@
                                               <div>
                                                 <div
                                                   id="expectations_option_very_low-row-title"
-                                                  class="explore-filter-menu__list-title"
+                                                  class="list-title"
                                                 >
                                                   Much worse than I expected
                                                 </div>
