--- a/signup_login.html
+++ b/signup_login.html
@@ -2094,7 +2094,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="sms-row-title" class="_gw4xx4"><span class="font-semibold">Text
+                                                <div id="sms-row-title" class="list-title"><span class="font-semibold">Text
                                                     message (SMS)</span></div>
                                                 <div id="sms-row-subtitle" class="desc">We'll text you a code.</div>
                                               </div>
@@ -2128,7 +2128,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="whatsapp-row-title" class="_gw4xx4"><span
+                                                <div id="whatsapp-row-title" class="list-title"><span
                                                     class="font-semibold">WhatsApp</span></div>
                                                 <div id="whatsapp-row-subtitle" class="desc">We'll send a code over
                                                   wifi.</div>
@@ -2163,7 +2163,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="phone_call-row-title" class="_gw4xx4"><span
+                                                <div id="phone_call-row-title" class="list-title"><span
                                                     class="font-semibold">Phone call</span></div>
                                                 <div id="phone_call-row-subtitle" class="desc">We'll call you with a
                                                   code.</div>
@@ -5355,7 +5355,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="sms-row-title" class="_gw4xx4"><span class="font-semibold">Text
+                                                <div id="sms-row-title" class="list-title"><span class="font-semibold">Text
                                                     message (SMS)</span></div>
                                                 <div id="sms-row-subtitle" class="desc">We'll text you a code.</div>
                                               </div>
@@ -5389,7 +5389,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="whatsapp-row-title" class="_gw4xx4"><span
+                                                <div id="whatsapp-row-title" class="list-title"><span
                                                     class="font-semibold">WhatsApp</span></div>
                                                 <div id="whatsapp-row-subtitle" class="desc">We'll send a code over
                                                   wifi.</div>
@@ -5424,7 +5424,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="phone_call-row-title" class="_gw4xx4"><span
+                                                <div id="phone_call-row-title" class="list-title"><span
                                                     class="font-semibold">Phone call</span></div>
                                                 <div id="phone_call-row-subtitle" class="desc">We'll call you with a
                                                   code.</div>
