--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1351,7 +1351,7 @@
                                 <div class="explore-filter-menu__list-label">
                                   <div
                                     id="default-private-row-title"
-                                    class="explore-filter-menu__list-title"
+                                    class="list-title"
                                   >
                                     Always require minimum price
                                   </div>
@@ -1400,7 +1400,7 @@
                                 <div class="explore-filter-menu__list-label">
                                   <div
                                     id="caregiver-free-row-title"
-                                    class="explore-filter-menu__list-title"
+                                    class="list-title"
                                   >
                                     Free admission for access providers
                                   </div>
