--- a/submission/about.html
+++ b/submission/about.html
@@ -1173,7 +1173,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="profile_photo-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       Jose Angelo
                                     </div>
