--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1158,7 +1158,7 @@
                                           <span class="account-container-mb__menu-btn-wrapper"
                                             ><div
                                               id="primary-language-row-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               English
                                             </div>
@@ -1221,7 +1221,7 @@
                                     <div class="explore-filter-menu__list-label">
                                       <div
                                         id="partner-switch-row-title"
-                                        class="explore-filter-menu__list-title"
+                                        class="list-title"
                                       >
                                         I’m hosting with an organization and
                                         have a confirmation code
