--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1151,7 +1151,7 @@
                                       <div class="explore-filter-menu__list-label">
                                         <div
                                           id="guest_requirements_infant_can_attend-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           Parents can bring kids under 2 years
                                         </div>
@@ -1196,7 +1196,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="Tag:4804-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 Communication accessibility
                                                 features
@@ -1241,7 +1241,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="Tag:4802-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 Environmental accessibility
                                                 features
@@ -1288,7 +1288,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="Tag:4805-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 Other accessibility features
                                               </div>
