--- a/submission/review.html
+++ b/submission/review.html
@@ -1103,7 +1103,7 @@
                                             <span class="account-container-mb__menu-btn-wrapper"
                                               ><div
                                                 id="disclosure-action-row-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <span class="_tt122m"
                                                   >Local laws</span
@@ -1175,7 +1175,7 @@
                                             <span class="account-container-mb__menu-btn-wrapper"
                                               ><div
                                                 id="disclosure-action-row-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <span class="_tt122m"
                                                   >Tour guiding</span
@@ -1247,7 +1247,7 @@
                                             <span class="account-container-mb__menu-btn-wrapper"
                                               ><div
                                                 id="disclosure-action-row-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <span class="_tt122m"
                                                   >Animals</span
@@ -1298,7 +1298,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="info_is_compliant_with_all_laws-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div class="_uvcwnv">
                                         By selecting this checkbox, I attest
@@ -1345,7 +1345,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="info_is_compliant_with_airbnb_policies-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div class="_uvcwnv">
                                         <div class="inline">
