--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1300,7 +1300,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         <div class="explore-filter-menu__list-label">
                                           <div
                                             id="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             Indoors or on my personal property
                                           </div>
@@ -1338,7 +1338,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         <div class="explore-filter-menu__list-label">
                                           <div
                                             id="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             Outdoors and not on my personal
                                             property
@@ -1383,7 +1383,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         <span class="account-container-mb__menu-btn-wrapper"
                                           ><div
                                             id="CustomView:113-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             Animal species
                                           </div>
