--- a/wishlists.html
+++ b/wishlists.html
@@ -278,7 +278,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148602671-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   1st Wishlist
@@ -349,7 +349,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148604100-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <div class="_ytmuji">5th</div>
                                               </div>
@@ -410,7 +410,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148603879-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   Cooking
@@ -473,7 +473,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148603784-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   Concerts
@@ -536,7 +536,7 @@
                                             <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148603430-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   Experiences
