--- a/account-notifications.html
+++ b/account-notifications.html
@@ -668,7 +668,7 @@
                                                 <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="undefinedEMAIL-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     Unsubscribe from all
                                                     marketing emails
@@ -1476,7 +1476,7 @@
                                                     <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="undefinedEMAIL-row-title"
-                                                        class="explore-filter-menu__list-title"
+                                                        class="list-title"
                                                       >
                                                         Unsubscribe from all
                                                         marketing emails
@@ -2390,7 +2390,7 @@
                         <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
-                            class="explore-filter-menu__list-title"
+                            class="list-title"
                           >
                             Email
                           </div>
@@ -2439,7 +2439,7 @@
                         <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
-                            class="explore-filter-menu__list-title"
+                            class="list-title"
                           >
                             SMS
                           </div>
@@ -2469,7 +2469,7 @@
                         <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
-                            class="explore-filter-menu__list-title"
+                            class="list-title"
                           >
                             Phone calls
                           </div>
@@ -2499,7 +2499,7 @@
                         <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
-                            class="explore-filter-menu__list-title"
+                            class="list-title"
                           >
                             Browser notifications
                           </div>
