--- a/basics.html
+++ b/basics.html
@@ -739,7 +739,7 @@
                                           <span class="account-container-mb__menu-btn-wrapper"
                                             ><div
                                               id="primary-language-row-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               English
                                             </div>
@@ -802,7 +802,7 @@
                                     <div class="explore-filter-menu__list-label">
                                       <div
                                         id="partner-switch-row-title"
-                                        class="explore-filter-menu__list-title"
+                                        class="list-title"
                                       >
                                         I’m hosting with an organization and
                                         have a confirmation code
