--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -184,7 +184,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--0-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div class="_8u4omh">Guests</div>
                                     </div>
@@ -281,7 +281,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--1-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div class="_8u4omh">Beds</div>
                                     </div>
@@ -378,7 +378,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--2-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div class="_8u4omh">Bedrooms</div>
                                     </div>
@@ -475,7 +475,7 @@
                                   <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--3-row-title"
-                                      class="explore-filter-menu__list-title"
+                                      class="list-title"
                                     >
                                       <div class="_8u4omh">Bathrooms</div>
                                     </div>
