--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -522,7 +522,7 @@
                                                 <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="underTwo-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     <span
                                                       class="place__tips-desc-text dir dir-ltr"
@@ -594,7 +594,7 @@
                                                 <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="Tag:4804-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     <span
                                                       class="place__tips-desc-text dir dir-ltr"
@@ -641,7 +641,7 @@
                                                 <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="Tag:4802-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     <span
                                                       class="place__tips-desc-text dir dir-ltr"
@@ -689,7 +689,7 @@
                                                 <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="Tag:4805-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     <span
                                                       class="place__tips-desc-text dir dir-ltr"
@@ -981,7 +981,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                 <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="requireIdVerification-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     <span
                                                       class="place__tips-desc-text dir dir-ltr"
