--- a/personal-info.html
+++ b/personal-info.html
@@ -286,7 +286,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="legalName-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -331,7 +331,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="legalName-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -450,7 +450,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="gender-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -495,7 +495,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="gender-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -653,7 +653,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="email-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -698,7 +698,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="email-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -783,7 +783,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="phoneNumbers-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -811,7 +811,7 @@
                                                 <div class="personal-info_list-item">
                                                   <div
                                                     id="320255193-row-title"
-                                                    class="explore-filter-menu__list-title"
+                                                    class="list-title"
                                                   >
                                                     <span dir="ltr"
                                                       >+63 *** ***3393</span
@@ -870,7 +870,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="phoneNumbers-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -914,7 +914,7 @@
                                         <div class="personal-info_list-item">
                                           <div
                                             id="320255193-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             <span dir="ltr"
                                               >+63 *** ***3393</span
@@ -965,7 +965,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="personal-info-fields-identity-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -1011,7 +1011,7 @@
                                         <div class="personal-info_list-item">
                                           <div
                                             id="address-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             <section>
                                               <h2
@@ -1056,7 +1056,7 @@
                                         <div class="personal-info_list-item">
                                           <div
                                             id="address-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             <section>
                                               <h2
@@ -2132,7 +2132,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="emergencyContacts-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -2177,7 +2177,7 @@
                                       <div class="personal-info_list-item">
                                         <div
                                           id="emergencyContacts-row-title"
-                                          class="explore-filter-menu__list-title"
+                                          class="list-title"
                                         >
                                           <section>
                                             <h2
@@ -3630,7 +3630,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="legalName-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -3675,7 +3675,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="legalName-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -3799,7 +3799,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="gender-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -3844,7 +3844,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="gender-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -4008,7 +4008,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="email-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -4053,7 +4053,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="email-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -4143,7 +4143,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="phoneNumbers-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -4171,7 +4171,7 @@
                                                     <div class="personal-info_list-item">
                                                       <div
                                                         id="320255193-row-title"
-                                                        class="explore-filter-menu__list-title"
+                                                        class="list-title"
                                                       >
                                                         <span dir="ltr"
                                                           >+63 *** ***3393</span
@@ -4231,7 +4231,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="phoneNumbers-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -4275,7 +4275,7 @@
                                             <div class="personal-info_list-item">
                                               <div
                                                 id="320255193-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <span dir="ltr"
                                                   >+63 *** ***3393</span
@@ -4332,7 +4332,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="personal-info-fields-identity-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -4378,7 +4378,7 @@
                                             <div class="personal-info_list-item">
                                               <div
                                                 id="address-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <section>
                                                   <h2
@@ -4423,7 +4423,7 @@
                                             <div class="personal-info_list-item">
                                               <div
                                                 id="address-row-title"
-                                                class="explore-filter-menu__list-title"
+                                                class="list-title"
                                               >
                                                 <section>
                                                   <h2
@@ -6046,7 +6046,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="emergencyContacts-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
@@ -6091,7 +6091,7 @@
                                           <div class="personal-info_list-item">
                                             <div
                                               id="emergencyContacts-row-title"
-                                              class="explore-filter-menu__list-title"
+                                              class="list-title"
                                             >
                                               <section>
                                                 <h2
