--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1084,7 +1084,7 @@
                                         <span class="account-container-mb__menu-btn-wrapper"
                                           ><div
                                             id="primary-theme-row-row-title"
-                                            class="explore-filter-menu__list-title"
+                                            class="list-title"
                                           >
                                             Beekeeping
                                           </div>
@@ -1312,7 +1312,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:510-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Animals
                                 </div>
@@ -1358,7 +1358,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:1347-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Art and design
                                 </div>
@@ -1404,7 +1404,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="CustomView:202-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Culture, society, and science
                                 </div>
@@ -1450,7 +1450,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:1718-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Drink
                                 </div>
@@ -1496,7 +1496,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:455-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Entertainment
                                 </div>
@@ -1542,7 +1542,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:1686-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Food
                                 </div>
@@ -1588,7 +1588,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="CustomView:201-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   History and literature
                                 </div>
@@ -1634,7 +1634,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:2513-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Nature and outdoors
                                 </div>
@@ -1680,7 +1680,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="CustomView:203-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Sightseeing, shopping and transportation
                                 </div>
@@ -1726,7 +1726,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:459-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Sports
                                 </div>
@@ -1772,7 +1772,7 @@
                               <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:2948-row-row-title"
-                                  class="explore-filter-menu__list-title"
+                                  class="list-title"
                                 >
                                   Wellness
                                 </div>
